tdf#124469 sw_redlinehide: fix PDF export of links to sequence fields

Missed one call where the return value must be forwarded.

(regression from 7d481f7ac1971be622520258a4b13ada29282844
 and 943d9be770e550d20ca72274fa5e914d1f61e605)

Change-Id: Ic405b29a1dce982bfdd81eeb5d678ceb79690bfc